--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
+    "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
+    "claudia": "^5.14.0",
     "nodemon": "^2.0.15"
   }
 }
