--- a/project/package.json
+++ b/project/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-date-picker": "^8.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
